Installing supervisor & multivisor[rpc] in conda and make supervisor as systemd service

--- a/linux/etc/supervisor/supervisord.conf
+++ b/linux/etc/supervisor/supervisord.conf
@@ -38,9 +38,9 @@ serverurl=unix:///etc/supervisor/run/supervisor.sock ; use a unix:// URL  for a 
 ; To interface this supervisor with multivisor
 ; https://github.com/tiagocoutinho/multivisor
 ; Joon--adapted to load multivisor installed in a conda env
-[rpcinterface:multivisor]
-supervisor.rpcinterface_factory = multivisor.rpc:make_rpc_interface
-bind=*:9002
+; [rpcinterface:multivisor]
+; supervisor.rpcinterface_factory = multivisor.rpc:make_rpc_interface
+; bind=*:9002
 
 [include]
 files = /etc/supervisor/conf.d/*.conf
